2009-02-04       Gaius Mulley <gaius@gnu.org>

	* gm2/Make-lang.in:  modified include path when compiling
	  ldtoa.c and dtoa.c.
	* gm2/gccgm2.c:  gccgm2_ConvertString (new function).
	  gccgm2_BuildStringConstantType (new function).
	  Re-factored gccgm2_BuildString.
	* gm2/gm2-compiler/M2GenGCC.mod:  convert string
	  if used during a constant constructor.
	* gm2/gm2-compiler/gccgm2.def:  export ConvertString.
	* gm2/gm2-libs-ch/dtoa.c:  another new implementation,
	  this time based on snprintf (due to lack of portability)
	  with qecvt_r and qfcvt_r.
	* gm2/gm2-libs-ch/ldtoa.c:  another new implementation,
	  this time based on snprintf (due to lack of portability)
	  with qecvt_r and qfcvt_r.
	* gm2/gm2-libs/FIO.def:  modified FindPosition to return
	  LONGINT.
	* gm2/gm2-libs/FIO.mod:  changed data type of abspos to
	  LONGINT, to reflect change in FindPosition.

2009-02-01       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2-libs/StringConvert.mod:  fixed carryOne
	  to allow the carry to correctly propagate to
	  the left most digit.

2009-01-31       Gaius Mulley <gaius@gnu.org>

	* gm2/gm2/Make-lang.in:  new rules to build ldtoa.o
	  and dtoa.o.
        * gm2/gm2/gccgm2.c:  change boolean_to_unsigned to
	  boolean_enum_to_unsigned and alter implementation
	  accordingly.
	* gm2/gm2/gm2-libs/StringConvert.mod:  use new ldtoa
	  interface and fixed bugs in ToSigFigs.
	* gm2/gm2/gm2-libs/configure.in:  check for strtod
	  and strtold.
	* gm2/gm2/gm2-libs/dtoa.def:  remove unused
	  enumerated fields and modify procedure function
	  names and parameters in light of the new dtoa
	  implementation.
	* gm2/gm2/gm2-libs/gm2-libs-host.h.in:  add entries
	  for HAVE_STRTOD and HAVE_STRTOLD.
	* gm2/gm2/gm2-libs/ldtoa.def:  remove unused
	  enumerated fields and modify procedure function
	  names and parameters in light of the new ldtoa
	  implementation.
	* gm2/gm2/gm2-libs-ch/dtoa.c:  new implementation
	  (GPL) based on libc strtod, ecvt and fcvt.